<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="level_of_activity">Level of Activity</string>
    <string-array name="level_of_activity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="steps_per_mile">Steps per Mile</string>
    <string name="validation_empty">Can not be empty.</string>
    <string name="nav_home">Home</string>
    <string name="nav_diet">Diet</string>
    <string name="nav_report">Report</string>
    <string name="nav_map">Map</string>
    <string name="nav_steps">Steps</string>
    <string name="nav_tracker">Tracker</string>
    <string name="food_category">Category</string>
    <string name="food">Food</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello, %user%!</string>
    <string name="diet_cal">CAL:</string>
    <string name="diet_fat">FAT:</string>
    <string name="diet_unit">UNIT:</string>
    <string name="diet_serv">SERV:</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="btn_add">ADD</string>
    <string name="add_food_dialog_title">Add New Food</string>
    <string name="alphabetical_digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="btn_edit">EDIT</string>
    <string name="tracker_goal">Goal</string>
    <string name="tracker_steps">Steps Taken</string>
    <string name="tracker_cal_consumed">Calories Consumed</string>
    <string name="tracker_cal_burned">Calories Burned</string>
    <string name="btn_food_consumed">CONSUMED</string>
    <string name="msg_check_connection">Check your internet connection</string>
    <string name="msg_something_went_wrong">Something went wrong</string>
    <string name="msg_address_error">Your home address can not be found</string>
    <string name="msg_email_not_available">This email is not available</string>
    <string name="msg_username_not_available">This username is not available</string>
    <string name="msg_try_again">Try again</string>
    <string name="pie_chart_title">Pie Chart</string>
    <string name="et_date_hint">Pick date</string>
    <string name="tv_bar_title">Bar Chart</string>
    <string name="btn_draw_chart">DRAW</string>
    <string name="btn_show_parks">SHOW PARKS</string>
    <string name="btn_send_report">Send Report</string>
    <string name="ft_title_home">Calorie Tracker</string>
    <string name="fr_title_diet">My Daily Diet</string>
    <string name="fr_title_steps">Steps</string>
    <string name="fr_title_tracker">Calorie Tracker</string>
    <string name="fr_title_report">Report</string>
    <string name="fr_title_map">Map</string>
    <string name="et_address_hint">Street, Suburb, State</string>
    <string name="underscore">_</string>
    <string name="btn_refresh">Refresh</string>
    <string name="today_goal">Today Goal</string>
</resources>
